Tidy up + favicon

--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -10,7 +10,11 @@
 	<p></p>
 <pre>
 
-In HANA Studio get logged in as the SYSTEM user.
+xs create-service xsuaa default minreq-uaa -c ./xs-security.json
+
+Create Roll Collections in the XSA Admin App, Login with XSA_ADMIN.
+
+xs app xsa-admin --urls
 
 </pre>
 
