--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -16,6 +16,13 @@ Create Roll Collections in the XSA Admin App, Login with XSA_ADMIN.
 
 xs app xsa-admin --urls
 
+XS-C Security Admin
+https://hxe2sp02.sap-a-team.com:4300/sap/hana/ide/security/
+
+Test Logging in.
+
+https://hxe2sp02.sap-a-team.com:4300/sap/hana/xs/formLogin/
+
 </pre>
 
 </body>
