added xsjs for odata

--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
-<title>CSV IMPORT</title>
+<title>MINREQ</title>
 </head>
 <body style="font-family: Tahoma, Geneva, sans-serif">
 	<h4><center>Minimum Requirement</center></h4>
@@ -24,6 +24,7 @@ Test Logging in.
 https://hxe2sp02.sap-a-team.com:4300/sap/hana/xs/formLogin/
 
 </pre>
+<a href="index.xsjs" target="xsjs">ODATA Links</a> Provided by the XSJS module in XSJS compatibility mode.<br />
 
 </body>
 </html>
