scope checking in nodejs works

--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -24,7 +24,8 @@ Test Logging in.
 https://hxe2sp02.sap-a-team.com:4300/sap/hana/xs/formLogin/
 
 </pre>
-<a href="index.xsjs" target="xsjs">ODATA Links</a> Provided by the XSJS module in XSJS compatibility mode.<br />
+<a href="index.xsjs" target="xsjs">ODATA Links</a> Provided by the XSJS module in XSJS compatibility mode.(Requires the user to have MINREQ_MGR role collection.)<br />
+<a href="/js/" target="js">NodeJS Test</a> Provided by the JS module.<br />
 
 </body>
 </html>
